fixed home image alignment

--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,11 @@
 
 .mainAppFrame {
   background-color: #c0539c82;
+  
 }
 
 .mainFrame {
+  border-left-style: outset;
   border-style: outset;
   text-align: center;
   position: absolute;
@@ -26,6 +28,8 @@
   border-bottom-left-radius: 5dvb;
   border-top-right-radius: 5dvb;
   border-top-left-radius: 5dvb;
+
+  
 
   font-family: "Nunito-Bold", Helvetica;
   /* padding-top: 0.5vw; */
@@ -40,7 +44,7 @@
   background-color: #ffffff;
   padding: auto;
   width: 100%;
-  height: 70px;
+  height: 80px;
   border-top-right-radius: 5dvb;
   border-top-left-radius: 5dvb;
 }
@@ -48,7 +52,12 @@
 .logo {
   width: 60px;
   height: 60px;
-  margin-right: 770px;
+  margin-right: 750px;
+  padding: 10px;
+  
+  
+  
+
 }
 
 /* ---------------------styles for text wrappers */
@@ -84,6 +93,7 @@
   .logo {
     margin-right: auto; /* Move logo to the left on smaller screens */
     margin-left: 20px;
+    
   }
 
   .text-wrapper {
@@ -99,30 +109,22 @@
 }
 
 .homepage-image {
-
-  margin-top: -7rem;
-  
-  margin-left: 150px;
-
-
-
- 
+  margin-top: -5rem;
+  margin-left: 200px;
   object-fit: cover;
-  
-  
-  
+  opacity: 75%;
 }
 
 .home-cage{
-  background-color: rgb(0, 255, 255);
+  /* background-color: rgb(0, 255, 255); */
   size: 10px;
   height: fit-content;
 }
 
 .menu-cage{
   /* background-color: rgb(208, 252, 252); */
-  size: 10px;
-  height: fit-content;
+  /* size: 10px; */
+  /* height: fit-content; */
   margin-right: 70px;
   
 }
